[package]
name = "hastilude"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"
udev = "0.6.3"
packed_struct = "0.10"
nix = "0.23.1"
cgmath = "0.18.0"
async-trait = "0.1.52"
scarlet = "1.1.0"
rand = "0.8.4"
heapless = "0.7.9"
rodio = "0.14.0"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"]}
tracing-futures = "0.2.5"
easings = "0.1.0"
parking_lot = "0.12"
