[package]
name = "hastilude"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "*"
thiserror = "*"
tokio = { version = "1.15.0", features = ["full"] }
futures = "0.3.19"
udev = "0.6.3"
packed_struct = "0.10"
nix = "0.23.1"
cgmath = "0.18.0"
async-trait = "0.1.52"
scarlet = "1.1.0"
rand = "0.8.4"
heapless = "0.7.9"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"]}
tracing-futures = "0.2.5"
easings = "0.1.0"
warp = "0.3.2"
rust-embed = "6.3.0"
mime_guess = "2.0.3"
serde = { version = "1", features = ["derive"]}
serde_json = "1.0.79"
rodio = "0.15"
